docs: 更新文档配置和算法相关内容